namespace/media/sonarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-https-route
  namespace: media
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "sonarr.oglesby.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarr
          port: 8989
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-http-route
  namespace: media
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "sonarr.oglesby.io"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
