namespace/media/sonarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: sonarr
          port: 8989
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: sonarr
          port: 8989
